assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:wght@300&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Lustria&display=swap');


* {
    margin: 0px;
    padding: 0;
    border: none;
}

body {
    background: #CDC7BE;
}


/* Navigation */


nav {
    max-height: max-content;
    margin-top: 5%;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 1%;
    position: -webkit-sticky;
    position: sticky;
    top: 0;
    z-index: 99;
    background-color: #CDC7BE;
}

.menu {
    display: flex;
    flex-direction: row;
    justify-content: center;
    margin: auto;
    list-style-type: none;
    height: 45px;
    height: auto;
    font-size: 5%;

}

.menu a {
    font-family: 'Lustria', serif;
    text-decoration: none;
    text-transform: uppercase;
    letter-spacing: 2px;
    color: #766161;
    font-size: 2vw;
    position: relative;
    margin: 0 20px 0px 20px;
    transition: 0.5s;
}

.menu a::after {
    position: absolute;
    content: "";
    top: 100%;
    left: 0;
    width: 100%;
    height: 3px;
    background: #E1F1DD;
    transform: scaleX(0);
    transform-origin: right;
    transition: transform 0.5s;

}

.menu a:hover {
    color: #E1F1DD;
}

.menu a:hover::after {
    transform: scaleX(1);
    transform-origin: left;
}

h1,
h2,
h3 {
    font-family: 'Lustria', serif;
    text-transform: uppercase;
    text-align: center;
    color: #766161;
}

p {
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 2vw;
    text-align: center;
    color: #766161;
    padding: 1%;

}

/* Home section */



.container {
    margin: 5px auto;
    width: 100%;
}

.external {
    width: 90%;
    height: auto;
    margin: 0 auto;
    border-color: #766161;
    border-style: solid;
    vertical-align: middle;
    padding: 2%;

}

.internal {
    width: 70%;
    height: auto;
    margin-top: 50px;
    margin-bottom: 50px;
    margin-left: auto;
    margin-right: auto;
    border-color: #E1F1DD;
    border-style: solid;
    vertical-align: middle;
    align-content: center;
    position: relative;
}

.header {
    max-width: max-content;
    z-index: 5;
    margin: -30px auto;
    font-size: 2vw;
    background-color: #CDC7BE;
    padding: 0 5%;
    height: max-content;
    border-top: 3px solid #E1F1DD;
    border-bottom: 3px solid #E1F1DD;
}

#meaning {
    padding-top: 10%;
    font-size: 2vw;
    text-transform: none;
    font-weight: 200;
    margin: 0 auto;
    z-index: 6;
    display: block;
    position: relative;
}

#moustache {
    z-index: 7;
    max-width: 70%;
    background-color: #CDC7BE;
    margin: 0 auto;
    position: relative;
    display: block;

}

/* Timeline */

.timeline-external {
    width: 80%;
    margin: 50px auto;
    position: relative;
    overflow: hidden;
    background-color: #CDC7BE;
}

/* vertical line */
/* .timeline-external:before {
    content: '';
    position: absolute;
    top: 0;
    left: 50%;
    margin-left: -1px;
    width: 1vh;
    height: 100%;
    background: #766161;
    z-index: 1
 } */

.timeline-header,
.styles-header,
.signup-header,
.video-header {
    border-top: 3px solid #E1F1DD;
    border-bottom: 3px solid #E1F1DD;
    margin: 0 auto;
    max-width: max-content;
    padding: 1ex;
}

.timeline-block {
    width: 50%;
    display: flex;
    height: auto;
    justify-content: space-between;
    border: 0.2vh solid #766161;
    /* need to change some values with padding */
    padding: 0.5vh;
    margin: 1vh;

}

.timeline-block-right {
    float: right;
    text-align: center;
}

.timeline-block-left {
    float: left;
    text-align: center;
    direction: rtl;
}

@media screen and (max-width: 768px) {
    .timeline-block {
        width: 100%;
        margin-bottom: 30px;
    }

    .timeline-block-right {
        float: none;
    }

    .timeline-block-left {
        float: none;
        direction: ltr;
    }
}


/* .marker {
    width: 16px;
    height: 16px;
    border-radius: 50%;
    border: 2px solid #87A7B3;
    background: #766161;
    margin-top: 10px;
    z-index: 9999;
     }
  */

.timeline-item {
    text-align: center;
    width: 100%;
    height: 15vh;
    top: 0;
    left: 0;
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    /* filter: grayscale(100%); */
    opacity: 1;
    transition: .5s ease;
    /* filter: blur(5px); */

}




.timeline-item h3 {

    color: #766161;
    margin: 15px 30%;
    border-top: 1px solid #766161;
    border-bottom: 1px solid #766161;
    font-size: 1.3rem;
    font-weight: 500;
    text-align: center;
    z-index: 99;
    opacity: 1;
    text-shadow: 1px 1px #e1f1dd;
    box-shadow: 0 -5px 6px -3px #e1f1dd, 0 5px 11px -3px #e1f1dd;

}



.timeline-item p {
    width: 90%;
    margin: auto;
    font-size: 85%;
    display: block;
    line-height: 1.5em;
    word-spacing: 1px;
    text-transform: none;
    color: #766161;
    text-align: center;
    text-shadow: 1px 1px #e1f1dd;
}




/* Styles */

.gallery {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}

.gallery-text {
    line-height: 3rem;
    position: absolute;
    margin: auto;
    vertical-align: middle;
    transition: opacity 2s;
}

.gallery-text ul {
    font-size: 2vw;
    line-height: 120%;
    list-style-type: none;
    font-family: 'Source Sans Pro', sans-serif;
    color: #766161;
    text-shadow: 1px 1px #e1f1dd;

}

.gallery-text h3 {
    font-size: 3vw;
    border-top: 3px solid #E1F1DD;
    border-bottom: 3px solid #E1F1DD;
    margin-bottom: 5%;
}

.gallery-item {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 26%;
    margin: 30px;
    border: 1px solid #766161;
    position: relative;
    object-fit: contain;
    overflow: hidden;
    text-align: center;
    padding: 7px;

}

.gallery-item img {
    max-width: 100%;
    opacity: 0;
    transition: opacity 2s;

}

.gallery-item:hover img {
    opacity: 1;
    transition: 4 ease;
}

.gallery-text:hover {
    opacity: 0;
}


/* Video section */

iframe {
    margin: 10px auto;
    display: block;
}


/* Sign up section */

form {
    width: 90%;
    margin: 2% auto;
}

#icon {
    width: 80%;
    font-size: 4vw;
    height: 10%;
    padding: 1% 48%;
}


i {
    margin: 0 auto;
}

.input {
    display: flex;
    align-items: center;
}

.text {
    height: 44px;
    border: #E1F1DD;
}

#email {
    width: 75%;
    background: #87A7B3;
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 2vw;
    text-transform: uppercase;
    letter-spacing: 1px;
    border-radius: 5px 0 0 5px;
    text-indent: 5%;
}

#button {
    width: 25%;
    height: 46px;
    background: #E1F1DD;
    font-family: 'Source Sans Pro', sans-serif;
    text-transform: uppercase;
    font-size: 2vw;
    border-radius: 0 5px 5px 0;

}

.fa-envelope-open-text {
    color: #E1F1DD;
}

/* Footer */

.left {
    float: left;
    padding-left: 3%;
    font-size: 1.5vw;
}

.socials {
    list-style-type: none;
    display: inline-block;
    /* somehow this attribute is not ignored and it works as intended */
    float: right;
    padding: 1% 3%;

}

.socials li {
    float: left;
    padding: 0 15px;
}

.socials i {
    color: #E1F1DD;
}

